211221_test데이터 돌려보기 완료

--- a/main.ipynb
+++ b/main.ipynb
@@ -637,11 +637,11 @@
         "X_test.shape"
       ],
       "metadata": {
-        "id": "XWfUOSR8cU2v",
-        "outputId": "82c28359-7ef7-4b94-f527-3eae481b0db9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XWfUOSR8cU2v",
+        "outputId": "82c28359-7ef7-4b94-f527-3eae481b0db9"
       },
       "id": "XWfUOSR8cU2v",
       "execution_count": 36,
@@ -1122,33 +1122,6 @@
     {
       "cell_type": "code",
       "source": [
-        "def plot_attention(image, result, attention_plot):\n",
-        "    #temp_image = np.array(Image.open(image))\n",
-        "\n",
-        "    fig = plt.figure(figsize=(10, 10))\n",
-        "\n",
-        "    len_result = len(result)\n",
-        "    for i in range(len_result):\n",
-        "        temp_att = np.resize(attention_plot[i], (8, 8))\n",
-        "        grid_size = max(np.ceil(len_result/2), 2)\n",
-        "        #ax = fig.add_subplot(grid_size, grid_size, i+1)\n",
-        "        #ax.set_title(result[i])\n",
-        "        #img = ax.imshow(image)\n",
-        "        ax.imshow(temp_att, cmap='gray', alpha=0.6, extent=img.get_extent())\n",
-        "\n",
-        "    plt.tight_layout()\n",
-        "    plt.show()"
-      ],
-      "metadata": {
-        "id": "vlXhkiW5atNq"
-      },
-      "id": "vlXhkiW5atNq",
-      "execution_count": 29,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# captions on the validation set\n",
         "image_url = df['image_url'][20]\n",
         "real_caption = df['caption_title_and_reference_description'][20]\n",
@@ -1156,16 +1129,15 @@
         "\n",
         "cv2_imshow(url_to_image(image_url)*255)\n",
         "print('Real Caption:', real_caption)\n",
-        "print('Prediction Caption:', ' '.join(result))\n",
-        "#plot_attention(image_url, result, attention_plot)"
+        "print('Prediction Caption:', ' '.join(result))"
       ],
       "metadata": {
-        "id": "18YXDOv3a8-Q",
-        "outputId": "f8668ad8-99e3-47a0-a857-8f8d9dd67a90",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 353
-        }
+        },
+        "id": "18YXDOv3a8-Q",
+        "outputId": "f8668ad8-99e3-47a0-a857-8f8d9dd67a90"
       },
       "id": "18YXDOv3a8-Q",
       "execution_count": 53,
