--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "Akm7USgsUzRK",
       "metadata": {
         "id": "Akm7USgsUzRK"
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "ea9aa630",
       "metadata": {
         "id": "ea9aa630",
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "6DPP8CTKbreN",
       "metadata": {
         "colab": {
@@ -68,7 +68,7 @@
       ],
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "drive.mount('/content/drive')   #구글드라이브 마운트"
       ]
     },
     {
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "5563b4c6",
       "metadata": {
         "id": "5563b4c6"
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "03cc5ae5",
       "metadata": {
         "colab": {
@@ -301,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "sVm2l0QnXe9k",
       "metadata": {
         "id": "sVm2l0QnXe9k"
@@ -325,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "d834668b",
       "metadata": {
         "colab": {
@@ -395,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "Igvb1YUqaJDT",
       "metadata": {
         "id": "Igvb1YUqaJDT"
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "6d96f146",
       "metadata": {
         "id": "6d96f146",
@@ -469,7 +469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "b053e8dc",
       "metadata": {
         "id": "b053e8dc",
@@ -500,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "c3745efb",
       "metadata": {
         "id": "c3745efb"
@@ -535,7 +535,7 @@
         }
       },
       "id": "s-MnFj3v_hB9",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +551,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "14a01efa",
       "metadata": {
         "id": "14a01efa",
@@ -617,7 +617,7 @@
         }
       },
       "id": "o8YtItvfDNVR",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -644,7 +644,7 @@
         "outputId": "82c28359-7ef7-4b94-f527-3eae481b0db9"
       },
       "id": "XWfUOSR8cU2v",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -670,7 +670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "70c3d07c",
       "metadata": {
         "id": "70c3d07c"
@@ -706,7 +706,7 @@
         "id": "KzsEbOdcEyab"
       },
       "id": "KzsEbOdcEyab",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -721,7 +721,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "95481c3d",
       "metadata": {
         "id": "95481c3d"
@@ -753,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "db640294",
       "metadata": {
         "id": "db640294"
@@ -787,7 +787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "27003f76",
       "metadata": {
         "id": "27003f76"
@@ -806,7 +806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "n6zPA3vDezmt",
       "metadata": {
         "id": "n6zPA3vDezmt"
@@ -854,7 +854,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "cca31e52",
       "metadata": {
         "id": "cca31e52"
@@ -867,7 +867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "7cf142aa",
       "metadata": {
         "id": "7cf142aa"
@@ -883,7 +883,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "72fb7502",
       "metadata": {
         "id": "72fb7502"
@@ -899,7 +899,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "dcc40270",
       "metadata": {
         "id": "dcc40270"
@@ -913,7 +913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "921ad928",
       "metadata": {
         "id": "921ad928"
@@ -955,7 +955,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "06d691eb",
       "metadata": {
         "id": "06d691eb",
@@ -1116,7 +1116,7 @@
         "id": "1TL1jes5Vb2K"
       },
       "id": "1TL1jes5Vb2K",
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1140,7 +1140,7 @@
         "outputId": "f8668ad8-99e3-47a0-a857-8f8d9dd67a90"
       },
       "id": "18YXDOv3a8-Q",
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
