Colaboratory를 통해 생성됨

--- a/main.ipynb
+++ b/main.ipynb
@@ -68,7 +68,7 @@
       ],
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')   #구글드라이브 마운트"
+        "drive.mount('/content/drive')"
       ]
     },
     {
@@ -586,7 +586,7 @@
       "source": [
         "# y_train 은 캡션 문장인데, 토크나이저를 통해 문장들을 단어별 벡터화 해준다. (cap_vector)\n",
         "\n",
-        "top_k = 5000\n",
+        "top_k = 5000  # 최다 출현 단어들로 tokenizer를 구성할 건데 몇순위까지?\n",
         "tokenizer = tf.keras.preprocessing.text.Tokenizer(num_words=top_k,\n",
         "                                                  oov_token=\"<unk>\",\n",
         "                                                  filters='!\"#$%&*+.-;?@[]^`{}~ ')\n",
@@ -773,7 +773,14 @@
         "  def call(self, features, hidden):\n",
         "    '''\n",
         "    feautures : 이미지의 피쳐맵\n",
-        "    hidden : hidden state\n",
+        "    hidden : hidden state(은닉상태)\n",
+        "    수식: hidden layer = tanh ( W1*인코더은닉상태 + W2*디코더은닉상태)\n",
+        "          위 수식에서 인코더 디코더는 cnn인코더 rnn디코더가 아닌 \n",
+        "          바다나우 어텐션에서의 인풋인코더(여기선 이미지정보), 아웃풋인코더(어텐션토큰 생성기의 현재은닉상태)를 뜻함.\n",
+        "\n",
+        "          score = V * hidden layer\n",
+        "          attention_weight = softmax(score)\n",
+        "          context_vector = ( attention_weight * 인코더은닉상태 ) 의 가중합(reduce_sum)\n",
         "    '''\n",
         "    hidden_with_time_axis = tf.expand_dims(hidden, 1)\n",
         "    attention_hidden_layer = (tf.nn.tanh(self.W1(features) +\n",
@@ -797,10 +804,10 @@
         "class CNN_Encoder(tf.keras.Model):\n",
         "    def __init__(self, embedding_dim):\n",
         "        super(CNN_Encoder, self).__init__()\n",
-        "        self.fc = tf.keras.layers.Dense(embedding_dim)\n",
+        "        self.fc = tf.keras.layers.Dense(embedding_dim)    # embedding_dim 만큼의 node를 갖는 Fully Connected 레이어 생성\n",
         "    def call(self, x):\n",
-        "        x = self.fc(x)\n",
-        "        x = tf.nn.relu(x)\n",
+        "        x = self.fc(x)        # 레이어 통과후\n",
+        "        x = tf.nn.relu(x)     # relu 치환하여 return\n",
         "        return x"
       ]
     },
@@ -822,13 +829,13 @@
         "    self.gru = tf.keras.layers.GRU(self.units,\n",
         "                                   return_sequences=True,\n",
         "                                   return_state=True,\n",
-        "                                   recurrent_initializer='glorot_uniform')\n",
-        "    self.fc1 = tf.keras.layers.Dense(self.units)\n",
-        "    self.fc2 = tf.keras.layers.Dense(vocab_size)\n",
+        "                                   recurrent_initializer='glorot_uniform')  # keras GRU 모델 사용\n",
+        "    self.fc1 = tf.keras.layers.Dense(self.units)    # fc1은 unit수만큼\n",
+        "    self.fc2 = tf.keras.layers.Dense(vocab_size)    # fc2 는 tokenizer에서 설정한 최대길이(top_k)\n",
         "\n",
         "    self.attention = BahdanauAttention(self.units)\n",
         "\n",
-        "  def call(self, x, features, hidden):\n",
+        "  def call(self, x, features, hidden):     \n",
         "    context_vector, attention_weights = self.attention(features, hidden)\n",
         "    x = self.embedding(x)\n",
         "    x = tf.concat([tf.expand_dims(context_vector, 1), x], axis=-1)\n",
@@ -892,23 +899,8 @@
       "source": [
         "start_epoch = 0\n",
         "if ckpt_manager.latest_checkpoint:\n",
-        "  start_epoch = int(ckpt_manager.latest_checkpoint.split('-')[-1])\n",
-        "  # restoring the latest checkpoint in checkpoint_path\n",
-        "  ckpt.restore(ckpt_manager.latest_checkpoint)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "dcc40270",
-      "metadata": {
-        "id": "dcc40270"
-      },
-      "outputs": [],
-      "source": [
-        "# adding this in a separate cell because if you run the training cell\n",
-        "# many times, the loss_plot array will be reset\n",
-        "loss_plot = []"
+        "start_epoch = int(ckpt_manager.latest_checkpoint.split('-')[-1])  # 파일 제일 최근꺼의 epoch 맞추기\n",
+        "  ckpt.restore(ckpt_manager.latest_checkpoint) # ㅇ"
       ]
     },
     {
